--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -31,6 +31,8 @@
 @using Gastos.Pwa.Components.Shared
 @using Gastos.Pwa.Components.Shared.Monitor
 @using Gastos.Pwa.Components.Shared.Table
+@using Gastos.Pwa.Models
+@using Gastos.Pwa.Services
 @using Gastos.Pwa.Shared.Extensions
 @using Gastos.Pwa.Shared.Services
 
