--- a/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
+++ b/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
@@ -26,7 +26,7 @@
                             <tbody>
                                 <tr>
                                     <td><strong>Versión:</strong></td>
-                                    <td>@versionInfo.Version</td>
+                                    <td>@versionInfo.FullVersion</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Build:</strong></td>
