--- a/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
+++ b/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
@@ -5,7 +5,7 @@
 @inject IWebAssemblyHostEnvironment HostEnvironment
 @inject IVersionService VersionService
 
-<PageHeading Title="Configuración PWA" IsHome="true" />
+<PageHeading Title="Configuración PWA" />
 
 <MudContainer MaxWidth="MaxWidth.Medium">
 
