Disable DocIntelHealthMonitor and update version info
- 🛠️ Commented out `<DocIntelHealthMonitor />` in `AnalysisJobsPage.razor` to temporarily disable its rendering.
- 🔢 Incremented build number in `version-info.json` from `134` to `135`.
- 🕒 Updated commit hash and timestamps in `version-info.json` to reflect the latest build.

--- a/Gastos.Pwa/Components/Pages/AnalysisJobsPage.razor
+++ b/Gastos.Pwa/Components/Pages/AnalysisJobsPage.razor
@@ -5,7 +5,7 @@
 
 <PageHeading Title="@(string.Format(Loc.Get(RS.Reading0), Loc.Get(RS.EntityReceipts)))" />
 
-<DocIntelHealthMonitor />
+@* <DocIntelHealthMonitor /> *@
 
 <AnalysisJobsCreation />
 <br />
