prueba sin LogApplicationInsightsConfiguration

--- a/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
+++ b/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
@@ -1,4 +1,5 @@
 @page "/pwa-settings"
+@using Gastos.Pwa.Shared.Models
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @inject IJSRuntime JS
 @inject ISnackbar Snackbar
