--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -32,9 +32,8 @@
 @using Gastos.Pwa.Components.Shared
 @using Gastos.Pwa.Components.Shared.Monitor
 @using Gastos.Pwa.Components.Shared.Table
-@using Gastos.Pwa.Models
-@using Gastos.Pwa.Services
 @using Gastos.Pwa.Shared.Extensions
+@using Gastos.Pwa.Shared.Models
 @using Gastos.Pwa.Shared.Services
 
 @using Gastos.Shared.Entities
